name:                  commonlog-parser
version:               0.1.0.0
synopsis:              CommonLog format parser.
description:           CommonLog format parser.
license:               MIT
license-file:          LICENSE
author:                Derek Schaefer
maintainer:            derek.schaefer@gmail.com
copyright:             (c) 2014 Derek Schaefer
category:              Text
build-type:            Simple
cabal-version:         >= 1.10

executable commonlog-parser
  main-is:             Main.hs
  build-depends:       base,
                       commonlog-parser,
                       bytestring
  hs-source-dirs:      src/bin
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

library
  exposed-modules:     Text.Log.Common,
                       Text.Log.Common.Types,
                       Text.Log.Common.Parser
  build-depends:       base >= 4.7 && < 4.8,
                       bytestring >= 0.10.0.2,
                       attoparsec >= 0.12.1.1,
                       time == 1.4.2,
                       old-locale == 1.0.0.6
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -O2 -Wall
